rd 1 of Kathy Changes

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
           	<ul class="nav navbar-nav centered">
 				<li><a href="index.html#welcomewrap" title="Welcome">Welcome</a></li>
 				<li><a href="aboutus.html" title="Our Story">About Us</a></li>
-				<li><a href="wedding.html" title="Wedding Party">The Wedding</a></li>
-				<li><a href="travelaccomodations.html" title="Accomodations">Travel/Accomodations</a></li>
+				<li><a href="weddingparty.html" title="Wedding Party">Wedding Party</a></li>
+				<li><a href="wedding.html" title="Wedding Party">Details</a></li>
+				<li><a href="travelaccomodations.html" title="Accomodations">Travel</a></li>
 				<li><a href="registry.html" title="Registry">Registry</a></li>
 				<li><a href="photos.html" title="Schedule">Photos</a></li>
-				
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -111,16 +111,8 @@
 				</div><!--/.col-lg-12 -->
 			</div><!--/.row -->
 		</div><!--/.container -->
-	</div><!--/.#headerwrap -->
-	<div id="headerwrap">
-		<div class="container-fluid">
-			<div class="row centered">
-				<div class="col-lg-12">
+	</div>
 
-				</div><!--/.col-lg-12 -->
-			</div><!--/.row -->
-		</div><!--/.container -->
-	</div><!--/.#headerwrap -->
 	
 
 </div>
