--- a/wedding.html
+++ b/wedding.html
@@ -74,11 +74,11 @@
           	<ul class="nav navbar-nav centered">
 				<li><a href="index.html#welcomewrap" title="Welcome">Welcome</a></li>
 				<li><a href="aboutus.html" title="Our Story">About Us</a></li>
-				<li><a href="wedding.html" title="Wedding Party">The Wedding</a></li>
-				<li><a href="travelaccomodations.html" title="Accomodations">Travel/Accomodations</a></li>
+				<li><a href="weddingparty.html" title="Wedding Party">Wedding Party</a></li>
+				<li><a href="wedding.html" title="Wedding Party">Details</a></li>
+				<li><a href="travelaccomodations.html" title="Accomodations">Travel</a></li>
 				<li><a href="registry.html" title="Registry">Registry</a></li>
 				<li><a href="photos.html" title="Schedule">Photos</a></li>
-				
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -111,7 +111,7 @@
 	</div>-->
 	
 <section id="scheduleofevents" name="scheduleofevents"></section>
-	<div id="scheduleofeventswrap" class="top-edge-shadow topsection">
+	<div id="sectionwrap" class="top-edge-shadow topsection">
 		<div class="row">
 			<div class="col-lg-7 col-lg-offset-1">
 				<h1>Schedule of Events</h1><hr class="whitebackground">
@@ -123,20 +123,19 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-lg-11 col-lg-offset-1">
-					<h3>Friday 11.3.2017</h3>
+					<h3>Friday, 11.3.2017</h3>
 				</div>
 				<div class="container-fluid">
 					<div class="row">
-							<div class="col-xs-3 righttext">
+							<div class="col-xs-4 righttext">
 								Welcome Party
 							</div>
-							<div class="col-xs-2 centered">
-								4:00 PM
+							<div class="col-xs-3 centered">
+								8:30 PM until 10:30 PM
 							</div>
-							<div class="col-lg-7">
-								Info here
+							<div class="col-xs-5">
+								Please join us for dessert and drinks at the Attire: 
 							</div>
-						</div>
 					</div>
 				</div>
 			</div>
@@ -146,25 +145,36 @@
 				</div>
 				<div class="container-fluid">
 					<div class="row">
-						<div class="col-xs-3 righttext">
-							Welcome Party
+						<div class="col-xs-4 righttext">
+							Transportation Departs
 						</div>
-						<div class="col-xs-2 centered">
-							4:00 PM
+						<div class="col-xs-3 centered">
+							2:30 PM
 						</div>
-						<div class="col-lg-7">
-							Info here
+						<div class="col-xs-5">
+							Please meet your motor coach to leave for St. Patricks Church.  Coach transportation will depart from the Old Post Office Pavilion and The J.W. Marriott
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-xs-3 righttext">
-							Welcome Party
+						<div class="col-xs-4 righttext">
+							The Wedding Celebration of Allie and Matt
 						</div>
-						<div class="col-xs-2 centered">
-							4:00 PM
+						<div class="col-xs-3 centered">
+							3:00 PM
 						</div>
-						<div class="col-lg-7">
-							Info here
+						<div class="col-xs-5">
+							Please join us at Saint Patrick's Church 619 10th Street, NW Washington, DC
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-4 righttext">
+							... The Celebration Continues
+						</div>
+						<div class="col-xs-3 centered">
+							6:00 PM
+						</div>
+						<div class="col-xs-5">
+							Join us at the Old Post Office Pavilion Presidential Ballroom 1100 Pennslyvania Avenue Washington, DC.  Attire: Black Tie
 						</div>
 
 					</div>
@@ -172,18 +182,18 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-11 col-lg-offset-1">
-					<h3>Sunday 11.5.2017</h3>
+					<h3>Sunday, 11.5.2017</h3>
 				</div>
 				<div class="container-fluid fullsection">
 					<div class="row">
-						<div class="col-xs-3 righttext">
-							Welcome Party
+						<div class="col-xs-4 righttext">
+							Farewell Brunch
 						</div>
-						<div class="col-xs-2 centered">
-							4:00 PM
+						<div class="col-xs-3 centered">
+							9:00 AM until 11:30 AM
 						</div>
-						<div class="col-lg-7">
-							Info here
+						<div class="col-xs-5">
+							We don't want the weekend to end so please join us for brunch in the Jefferson Room at the Old Post Office Pavilion.
 						</div>
 					</div>
 				</div>
