--- a/photos.html
+++ b/photos.html
@@ -81,11 +81,11 @@
           	<ul class="nav navbar-nav centered">
 				<li><a href="index.html#welcomewrap" title="Welcome">Welcome</a></li>
 				<li><a href="aboutus.html" title="Our Story">About Us</a></li>
-				<li><a href="wedding.html" title="Wedding Party">The Wedding</a></li>
-				<li><a href="travelaccomodations.html" title="Accomodations">Travel/Accomodations</a></li>
+				<li><a href="weddingparty.html" title="Wedding Party">Wedding Party</a></li>
+				<li><a href="wedding.html" title="Wedding Party">Details</a></li>
+				<li><a href="travelaccomodations.html" title="Accomodations">Travel</a></li>
 				<li><a href="registry.html" title="Registry">Registry</a></li>
 				<li><a href="photos.html" title="Schedule">Photos</a></li>
-				
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -120,7 +120,7 @@
 
 
 <section id="travel" name="travel"></section>
-	<div id="travelwrap" class="">
+	<div id="sectionwrap" class="top-edge-shadow topsection">
 		<div class="row">
 			<div class="col-lg-11 col-lg-offset-1">
 				<h1>Photos</h1><hr class="whitebackground">
