rd 2 Kathy Changes

--- a/wedding.html
+++ b/wedding.html
@@ -127,15 +127,21 @@
 				</div>
 				<div class="container-fluid">
 					<div class="row">
-							<div class="col-xs-4 righttext">
-								Welcome Party
-							</div>
-							<div class="col-xs-3 centered">
-								8:30 PM until 10:30 PM
-							</div>
-							<div class="col-xs-5">
-								Please join us for dessert and drinks at the Attire: 
-							</div>
+						<div class="col-xl-1 col-centered">
+							<h4>Welcome Party</h4>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<h5>8:30 PM until 10:30 PM</h5>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							Please join us for dessert and drinks at the party center. 
+							<br /><br />
+							<b>Attire: Cocktail Dresses and Business Casual</b>
+						</div><br />
 					</div>
 				</div>
 			</div>
@@ -145,56 +151,77 @@
 				</div>
 				<div class="container-fluid">
 					<div class="row">
-						<div class="col-xs-4 righttext">
-							Transportation Departs
-						</div>
-						<div class="col-xs-3 centered">
-							2:30 PM
-						</div>
-						<div class="col-xs-5">
-							Please meet your motor coach to leave for St. Patricks Church.  Coach transportation will depart from the Old Post Office Pavilion and The J.W. Marriott
+						<div class="col-xl-1 col-centered">
+							<h4>Transportation Departs</h4>
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-xs-4 righttext">
-							The Wedding Celebration of Allie and Matt
-						</div>
-						<div class="col-xs-3 centered">
-							3:00 PM
-						</div>
-						<div class="col-xs-5">
-							Please join us at Saint Patrick's Church 619 10th Street, NW Washington, DC
+						<div class="col-xl-1 col-centered">
+							<h5>2:30 PM</h5>
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-xs-4 righttext">
-							... The Celebration Continues
+						<div class="col-xl-1 col-centered">
+							Please meet your motor at outside Old Post Office Pavilion or The J.W. Marriott
+						</div><br />
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<h4>The Wedding Celebration of Allie and Matt</h4>
 						</div>
-						<div class="col-xs-3 centered">
-							6:00 PM
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<h5>3:00 PM</h5>
 						</div>
-						<div class="col-xs-5">
-							Join us at the Old Post Office Pavilion Presidential Ballroom 1100 Pennslyvania Avenue Washington, DC.  Attire: Black Tie
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							Saint Patrick's Church <br />619 10th Street <br />NW Washington, DC
+						</div><br />
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<h4>... The Celebration Continues</h4>
 						</div>
-
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<h5>6:00 PM</h5>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							Old Post Office Pavilion<br />Presidential Ballroom <br />1100 Pennslyvania Avenue<br /> Washington, DC<br /><br /> <b>Attire: Black Tie</b>
+						</div>
+						<br />
 					</div>
 				</div>
+
+
+
+
+
+				
 			</div>
 			<div class="row">
 				<div class="col-lg-11 col-lg-offset-1">
 					<h3>Sunday, 11.5.2017</h3>
 				</div>
-				<div class="container-fluid fullsection">
+				<div class="container-fluid">
 					<div class="row">
-						<div class="col-xs-4 righttext">
-							Farewell Brunch
+						<div class="col-xl-1 col-centered">
+							<h4>Farewell Brunch</h4>
 						</div>
-						<div class="col-xs-3 centered">
-							9:00 AM until 11:30 AM
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<h5>9:00 AM until 11:30 AM</h5>
 						</div>
-						<div class="col-xs-5">
-							We don't want the weekend to end so please join us for brunch in the Jefferson Room at the Old Post Office Pavilion.
-						</div>
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							We don't want the weekend to end so please join us for brunch<br /><br />Old Post Office Pavilion<br />Jefferson Room<br />1100 Pennslyvania Avenue<br /> Washington, DC
 					</div>
 				</div>
 			</div>
