adding travel info and finalizing wedding party

--- a/travelaccomodations.html
+++ b/travelaccomodations.html
@@ -120,79 +120,182 @@
 				<h1>Travel</h1><hr class="whitebackground">
 			</div>
 		</div>
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-lg-11 col-lg-offset-1 hotelrow">
-					<h3>Planes</h3>
-				</div>
-				<div class="container-fluid">
-					<div class="row">
-						<div class="col-xs-3 righttext">Ronald Reagan Washington National Airport</div>
-						<div class="col-xs-3 centered"><a href="https://goo.gl/maps/zpz1bqjahhJ2" type="button" class="btn btn-calendar">Google Maps</a></div>
-						<div class="col-xs-6 whitetext"><p>Reagan is the most convenient airport.  You can easily take a taxi five miles from the Airport to any of the hotels.</p></div>
-					</div>
-					<div class="row">
-						<div class="col-xs-3 righttext">Baltimore Washington International Airport</div>
-						<div class="col-xs-3 centered"><a href="https://goo.gl/maps/i6LRWe8mCY72" type="button" class="btn btn-calendar">Google Maps</a></div>
-						<div class="col-xs-6 whitetext"><p>BWI is also a convenient airport, but will probably require a rental car.  The drive will take approximately 50 minutes depending on traffic.</p></div>
-					</div>
-					<div class="row">
-						<div class="col-xs-3 righttext">Dulles International Airport</div>
-						<div class="col-xs-3 centered"><a href="https://goo.gl/maps/KoU4LUwNhpN2" type="button" class="btn btn-calendar">Google Maps</a></div>
-						<div class="col-xs-6 whitetext"><p>Dulles is just as convenient as BWI.  It will also require a rental car.  The drive will take approximately 50 minutes depending on traffic.</p></div>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-11 col-lg-offset-1 hotelrow">
-					<h3>Trains</h3>
-				</div>
-				<div class="container-fluid">
-					<div class="row">
-						<div class="col-xs-3 righttext">Amtrak Union Station</div>
-						<div class="col-xs-3 centered"><a href="https://www.amtrak.com/servlet/ContentServer?pagename=am/am2Station/Station_Page&code=WAS" type="button" class="btn btn-calendar">Amtrack <br>Website</a></div>
-						<div class="col-xs-6 whitetext"><p>After arriving at Union Station, take a taxi two miles to The Old Post Office Pavilion</p></div>
-					</div>
-				</div>
-			</div>
-			<!--
-			<div class="row">
-				<div class="col-lg-11 col-lg-offset-1 hotelrow">
-					<h3>Automobiles</h3>
-				</div>
-				<div class="container-fluid fullsection">
-					<div class="row">
-						<div class="col-xs-3 righttext">From BWI and I-95 from the North<br/><i>35 Miles</i></div>
-						<div class="col-xs-3 centered"><a href="https://goo.gl/maps/TJAMbjuPw6w" type="button" class="btn btn-calendar">Map from BWI</a></div>
-						<div class="col-xs-6 whitetext"><p>Take I-95 S, I-495 S, Baltimore-Washington Pkwy and State Hwy 295 to Maine Ave SW in Washington. Take the Maine Ave exit from I-395 S. Take 15th St NW to Pennsylvania Ave NW.</p></div>
-					</div>
-					<div class="row">
-						<div class="col-xs-3 righttext">From Pittsburgh and I-270 from the North</div>
-						<div class="col-xs-3 centered"><a href="https://goo.gl/maps/hHFhzNjEEzn" type="button" class="btn btn-calendar">Map from <br>Pittsburgh</a></div>
-						<div class="col-xs-6 whitetext"><p>Take I-270 S and George Washington Memorial Pkwy to 12th St Expy in Washington. Take the 12th St exit from I-395 N. Continue on 12th St Expy. Drive to Pennsylvania Ave NW.</p></div>
-					</div>
-					<div class="row">
-						<div class="col-xs-3 righttext">From Dulles International Airport<br/><i>28 Miles</i></div>
-						<div class="col-xs-3 centered"><a href="https://goo.gl/maps/76QdYjJnoED2" type="button" class="btn btn-calendar">Map from <br>Dulles Airport</a></div>
-						<div class="col-xs-6 whitetext"><p>Continue on Dulles Access Rd. Take I-66 E to US-50 E/Constitution Ave NW in Washington. Exit from I-66 E. Continue on US-50 E/Constitution Ave NW. Drive to Pennsylvania Ave NW.</p></div>
-					</div>
-					<div class="row">
-						<div class="col-xs-3 righttext">From Ronald Reagan Washington National Airport<br/><i>5 Miles</i></div>
-						<div class="col-xs-3 centered"><a href="https://goo.gl/maps/GCyoYxQQz3E2" type="button" class="btn btn-calendar">Map from <br>Reagan Airport</a></div>
-						<div class="col-xs-6 whitetext"><p>Get on I-395 N from George Washington Memorial Pkwy. Continue on I-395 N. Take 12th St Expy to 12th St NW. Continue on 12th St NW. Drive to Pennsylvania Ave NW.</p></div>
-					</div>
-				</div>-->
-			</div>
-		</div>
-	</div>
 
-<section id="accommodations" name="accommodations"></section>
-	<div id="accommodationswrap" class="bottom-edge-shadow">
-		<div class="row">
-			<div class="col-lg-12">
-				<h1>Accomodations</h1><hr class="whitebackground">
+
+			<div class="container-fluid">
+
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<h3>Hotels</h3>
+						</div>
+					</div>
+					<hr class="datedivider">
+
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<img class="imghotelcell imagedropshadow" src="assets/img/photos/opop_320x320.jpg"/>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<h4>Old Post Office Pavilion</h4>
+							<h5>1100 Pennsylvania Ave NW <br />Washington, DC 20004</h5>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<a href="tel:8558786700" type="button" class="btn btn-calendar">855.878.6700</a>
+							<a href="https://gc.synxis.com/rez.aspx?Hotel=65834&amp;Chain=12157&amp;arrive=11/3/2017&amp;depart=11/5/2017&amp;adult=1&amp;child=0&amp;group=2944260" type="button" class="btn btn-calendar">Website</a>
+							<a href="https://goo.gl/maps/9pcMAGqPGiM2" type="button" class="btn btn-calendar">Google Maps</a>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered"> <br />
+							We have a block of rooms reserved at The Old Post Office Pavilion/The Trump Hotel Washington D.C. starting at $350/night (plus tax). Reservations can be accessed via the website button above. Guests can also call 855-878-6700 to make reservations by referencing the Allie Williams and Matt Slocum wedding block. 
+						</div><br />
+					</div>
+
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<img class="imghotelcell imagedropshadow" src="assets/img/photos/marriott_320x320.jpg"/>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<h4>JW Marriott Washington, DC</h4>
+							<h5>1331 Pennsylvania Ave NW <br /> Washington, DC 20004</h5>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<a href="tel:2026262603" type="button" class="btn btn-calendar">202.626.2603</a>
+							<a href="http://www.marriott.com/hotels/travel/wasjw-jw-marriott-washington-dc/" type="button" class="btn btn-calendar">Website</a>
+							<a href="https://goo.gl/maps/kKTfVRupxHP2" type="button" class="btn btn-calendar">Google Maps</a>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered"><br />
+							We have a block of rooms reserved at the JW Marriott for $209/night (available Thursday through Sunday). Rates available until October 13, 2017.  The hotel is located 0.3 miles from the Old Post Office Pavilion, where the wedding reception and Sunday brunch will take place and 0.4 mile from St. Patrick’s Church
+To reserve, please click website button above to access our personalized booking page. Note: If you call the hotel for assistance, please reference the Williams/Slocum Wedding room block.
+
+						</div><br />
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<img class="imghotelcell imagedropshadow" src="assets/img/photos/hyatt_320x320.jpg"/>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<h4>Grand Hyatt Washington</h4>
+							<h5>1000 H St NW <br /> Washington, DC 20001</h5>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<a href="tel:2025821234" type="button" class="btn btn-calendar">(202) 582-1234</a>
+							<a href="https://washingtondc.grand.hyatt.com/en/hotel/home.html" type="button" class="btn btn-calendar">Website</a>
+							<a href="https://goo.gl/maps/HJKHyQ5C2Z92" type="button" class="btn btn-calendar">Google Maps</a>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered"><br />
+							We have a block of rooms reserved at the Grand Hyatt Washington for $145/night (availalbe Thursday through Sunday). Rates available until October 12, 2017.  The hotel is located 0.4 mile from the Old Post Office Pavilion, where the wedding reception and Sunday brunch will take place and 0.2 mile from St. Patrick’s Church.
+To reserve, please click the website button above to access our personalized booking page.
+Note: If you call the hotel for assistance, please reference the Williams/Slocum Wedding room block.
+
+						</div><br />
+					</div>
+				</div>
+
+
+
+
+
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<h3>Planes</h3>
+						</div>
+					</div>
+					<hr class="datedivider">
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<h4>Ronald Reagan Washington National Airport (DCA)</h4>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<a href="https://goo.gl/maps/zpz1bqjahhJ2" type="button" class="btn btn-calendar">Google Maps</a>
+						</div>
+					</div> <br />
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							Reagan is the most convenient airport.  You can easily take a taxi five miles from the Airport to any of the hotels.
+						</div><br />
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<h4>Dulles International Airport (IAD)</h4>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<a href="https://goo.gl/maps/KoU4LUwNhpN2" type="button" class="btn btn-calendar">Google Maps</a>
+						</div>
+					</div>
+					<br />
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							Dulles is just as convenient as BWI.  It will also require a rental car.  The drive will take approximately 50 minutes depending on traffic.
+						</div><br />
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<h4>Baltimore/Washington International Airport (BWI)</h4>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<a href="https://goo.gl/maps/i6LRWe8mCY72" type="button" class="btn btn-calendar">Google Maps</a>
+						</div>
+					</div>
+					<br />
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							BWI is also a convenient airport, but will probably require a rental car.  The drive will take approximately 50 minutes depending on traffic.
+						</div><br />
+					</div>
+					
+				</div>
+			
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<h3>Trains</h3>
+						</div>
+					</div>
+					<hr class="datedivider">
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<h4>Amtrack Union Station</h4>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<a href="https://www.amtrak.com/servlet/ContentServer?pagename=am/am2Station/Station_Page&amp;code=WAS" type="button" class="btn btn-calendar">Website</a>
+						</div>
+					</div>
+					<br />
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							Train information
+						</div><br />
+					</div>
+				</div>
 			</div>
-		</div>
+
 		<div class="container-fluid fullsection">
 			<div class="row">
 				<div id="mapholder" class="col-lg-12 centered">
@@ -200,87 +303,32 @@
 			
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-lg-12 hotelrow">
-					<h3>Old Post Office Pavilion</h3>
-					<h5>1100 Pennsylvania Ave NW <br />Washington, DC 20004</h5>
-				</div>
-			</div>
-			<div class="row hotelbuttonrow">
-				<div class="col-xs-3">
-					<a href="tel:2026951100" type="button" class="btn btn-calendar">(202) 695-1100</a>
-				</div>
-				<div class="col-xs-3">	
-					<a href="https://www.trumphotels.com/washington-dc/luxury-washington-dc-hotels" type="button" class="btn btn-calendar">OPOP Website</a>
-				</div>
-				<div class="col-xs-3">	
-					<a href="https://goo.gl/maps/9pcMAGqPGiM2" type="button" class="btn btn-calendar">Google Maps</a>
-				</div>
-			</div>
-		    <div class="row">
-				<div class="col-xs-5 photodiv">
-					<img class="imgcell imagedropshadow" src="assets/img/photos/opop_320x320.jpg"/>
-				</div>
-				<div class="col-xs-7 whitetext">
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-12 hotelrow">
-					<h3>Grand Hyatt Washington</h3>
-					<h5>1000 H St NW <br /> Washington, DC 20001</h5>
-				</div>
-			</div>
-			<div class="row hotelbuttonrow">
-				<div class="col-xs-3">
-					<a href="tel:2025821234" type="button" class="btn btn-calendar">(202) 582-1234</a>
-				</div>
-				<div class="col-xs-4">
-					<a href="https://washingtondc.grand.hyatt.com/en/hotel/home.html" type="button" class="btn btn-calendar">Grand Hyatt Website</a>
-				</div>
-				<div class="col-xs-2">
-					<a href="https://goo.gl/maps/HJKHyQ5C2Z92" type="button" class="btn btn-calendar">Google Maps</a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-5 photodiv">
-					<img class="imgcell imagedropshadow" src="assets/img/photos/hyatt_320x320.jpg"/>
-				</div>
-				<div class="col-xs-7 whitetext">
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-				</div>
-			</div>
-		
-			<div class="row">
-				<div class="col-lg-12 hotelrow">
-					<h3>JW Marriott Washington, DC</h3>
-					<h5>1331 Pennsylvania Ave NW <br /> Washington, DC 20004</h5>
-				</div>
-			</div>
-			<div class="row hotelbuttonrow">
-				<div class="col-xs-3">
-					<a href="tel:2023932000" type="button" class="btn btn-calendar">(202) 393-2000</a>
-				</div>
-				<div class="col-xs-4">
-					<a href="http://www.marriott.com/hotels/travel/wasjw-jw-marriott-washington-dc/" type="button" class="btn btn-calendar">JW Marriott Website</a>
-				</div>
-				<div class="col-xs-2">
-					<a href="https://goo.gl/maps/kKTfVRupxHP2" type="button" class="btn btn-calendar">Google Maps</a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-5 photodiv">
-					<img class="imgcell imagedropshadow" src="assets/img/photos/marriott_320x320.jpg"/>
-				</div>
-				<div class="col-xs-7 whitetext">
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>		
-				</div>
-			</div>
 		</div>
-	</div>
 
-
-</div>
+		<div class="container-fluid">
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<h3>Metro</h3>
+						</div>
+					</div>
+					<hr class="datedivider">
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<h4>Metro stop</h4>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<a href="https://www.wmata.com" type="button" class="btn btn-calendar">Map</a>
+						</div>
+					</div>
+					<br />
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							Train information
+						</div><br />
+					</div>
+				</div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
