--- a/wedding.html
+++ b/wedding.html
@@ -113,19 +113,24 @@
 <section id="scheduleofevents" name="scheduleofevents"></section>
 	<div id="sectionwrap" class="top-edge-shadow topsection">
 		<div class="row">
-			<div class="col-lg-7 col-lg-offset-1">
+			<div class="col-lg-11">
 				<h1>Schedule of Events</h1><hr class="whitebackground">
-			</div>
-			<div class="col-lg-4">
-				<a href="assets/other/alliemattwedding.ics" type="button" class="btn btn-calendar"><b>Add Events To Calendar</b> &nbsp; <i class="icon-calendar"></i></a>
 			</div>
 		</div>
 		<div class="container-fluid">
-			<div class="row">
-				<div class="col-lg-11 col-lg-offset-1">
-					<h3>Friday, 11.3.2017</h3>
-				</div>
 				<div class="container-fluid">
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<br />
+							<a href="assets/other/alliemattwedding.ics" type="button" class="btn btn-calendar"><b>Add Events To Calendar</b> &nbsp; <i class="icon-calendar"></i></a><br />
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<h3>Friday, 11.3.2017</h3>
+						</div>
+					</div>
+					<hr class="datedivider">
 					<div class="row">
 						<div class="col-xl-1 col-centered">
 							<h4>Welcome Party</h4>
@@ -144,12 +149,13 @@
 						</div><br />
 					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-11 col-lg-offset-1">
-					<h3>Saturday 11.4.2017</h3>
-				</div>
 				<div class="container-fluid">
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<h3>Saturday 11.4.2017</h3>
+						</div>
+					</div>
+					<hr class="datedivider">
 					<div class="row">
 						<div class="col-xl-1 col-centered">
 							<h4>Transportation Departs</h4>
@@ -162,7 +168,7 @@
 					</div>
 					<div class="row">
 						<div class="col-xl-1 col-centered">
-							Please meet your motor at outside Old Post Office Pavilion or The J.W. Marriott
+							Please meet your motor coach outside the Old Post Office Pavilion or The J.W. Marriott
 						</div><br />
 					</div>
 					<div class="row">
@@ -182,7 +188,7 @@
 					</div>
 					<div class="row">
 						<div class="col-xl-1 col-centered">
-							<h4>... The Celebration Continues</h4>
+							<h4>Reception</h4>
 						</div>
 					</div>
 					<div class="row">
@@ -197,18 +203,13 @@
 						<br />
 					</div>
 				</div>
-
-
-
-
-
-				
-			</div>
-			<div class="row">
-				<div class="col-lg-11 col-lg-offset-1">
-					<h3>Sunday, 11.5.2017</h3>
-				</div>
 				<div class="container-fluid">
+					<div class="row">
+						<div class="col-xl-1 col-centered">
+							<h3>Sunday, 11.5.2017</h3>
+						</div>
+					</div>
+					<hr class="datedivider">
 					<div class="row">
 						<div class="col-xl-1 col-centered">
 							<h4>Farewell Brunch</h4>
@@ -222,10 +223,9 @@
 					<div class="row">
 						<div class="col-xl-1 col-centered">
 							We don't want the weekend to end so please join us for brunch<br /><br />Old Post Office Pavilion<br />Jefferson Room<br />1100 Pennslyvania Avenue<br /> Washington, DC
+						</div>
 					</div>
 				</div>
-			</div>
-		</div>
 	</div>
 	
 	
