adding stories and modal

--- a/photos.html
+++ b/photos.html
@@ -40,12 +40,6 @@
     			$(".navbar-collapse").collapse('hide');
 			});
 
-	      	function showSlides() {
-	      		$("#headerwrap").css('background', 'url(assets/img/background.png)');
-
-	      	}
-
-
 			$('.thumbnail').click(function(){
 			      $('.modal-body').empty();
 			  	var title = $(this).parent('a').attr("title");
@@ -155,7 +149,8 @@
    
   </div>
 </div>
-
+</div>
+</div>
 
 <div tabindex="-1" class="modal fade" id="myModal" role="dialog">
   <div class="modal-dialog">
@@ -169,7 +164,6 @@
    </div>
   </div>
 </div>
-
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
