--- a/index.html
+++ b/index.html
@@ -65,12 +65,13 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse centered">
           	<ul class="nav navbar-nav centered">
-				<li><a href="index.html#welcomewrap" title="Welcome">Welcome</a></li>
 				<li><a href="aboutus.html" title="Our Story">About Us</a></li>
 				<li><a href="weddingparty.html" title="Wedding Party">Wedding Party</a></li>
-				<li><a href="wedding.html" title="Wedding Party">Details</a></li>
-				<li><a href="travelaccomodations.html" title="Accomodations">Travel</a></li>
+				<li><a href="wedding.html" title="Wedding">Schedule</a></li>
+				<li><a href="travelaccomodations.html" title="Accomodations">Accomodations</a></li>
+				<li><a href="travel.html" title="Travel">Travel</a></li>
 				<li><a href="registry.html" title="Registry">Registry</a></li>
+				<li><a href="travelaccomodations.html" title="Accomodations">Things To Do</a></li>
 				<li><a href="photos.html" title="Schedule">Photos</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -106,8 +107,9 @@
 		<div class="container-fluid">
 			<div class="row centered">
 				<div class="col-lg-12">
-					<h1>Allie & Matt</h1>
-					<h3>11.4.2017</h3>
+					<br /><br />
+					<h1 style="font-size:60px;">Allie & Matt</h1>
+					<h3 style="font-size:40px;">11.4.2017</h3>
 				</div><!--/.col-lg-12 -->
 			</div><!--/.row -->
 		</div><!--/.container -->
