--- a/photos.html
+++ b/photos.html
@@ -73,13 +73,14 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse centered">
           	<ul class="nav navbar-nav centered">
-				<li><a href="index.html#welcomewrap" title="Welcome">Welcome</a></li>
-				<li><a href="aboutus.html" title="Our Story">About Us</a></li>
-				<li><a href="weddingparty.html" title="Wedding Party">Wedding Party</a></li>
-				<li><a href="wedding.html" title="Wedding Party">Details</a></li>
-				<li><a href="travelaccomodations.html" title="Accomodations">Travel</a></li>
-				<li><a href="registry.html" title="Registry">Registry</a></li>
-				<li><a href="photos.html" title="Schedule">Photos</a></li>
+        <li><a href="aboutus.html" title="Our Story">About Us</a></li>
+        <li><a href="weddingparty.html" title="Wedding Party">Wedding Party</a></li>
+        <li><a href="wedding.html" title="Wedding">Schedule</a></li>
+        <li><a href="travelaccomodations.html" title="Accomodations">Accomodations</a></li>
+        <li><a href="travel.html" title="Travel">Travel</a></li>
+        <li><a href="registry.html" title="Registry">Registry</a></li>
+        <li><a href="travelaccomodations.html" title="Accomodations">Things To Do</a></li>
+        <li><a href="photos.html" title="Schedule">Photos</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
