--- a/travelaccomodations.html
+++ b/travelaccomodations.html
@@ -73,12 +73,13 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse centered">
           	<ul class="nav navbar-nav centered">
-				<li><a href="index.html#welcomewrap" title="Welcome">Welcome</a></li>
 				<li><a href="aboutus.html" title="Our Story">About Us</a></li>
 				<li><a href="weddingparty.html" title="Wedding Party">Wedding Party</a></li>
-				<li><a href="wedding.html" title="Wedding Party">Details</a></li>
-				<li><a href="travelaccomodations.html" title="Accomodations">Travel</a></li>
+				<li><a href="wedding.html" title="Wedding">Schedule</a></li>
+				<li><a href="travelaccomodations.html" title="Accomodations">Accomodations</a></li>
+				<li><a href="travel.html" title="Travel">Travel</a></li>
 				<li><a href="registry.html" title="Registry">Registry</a></li>
+				<li><a href="travelaccomodations.html" title="Accomodations">Things To Do</a></li>
 				<li><a href="photos.html" title="Schedule">Photos</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -117,20 +118,13 @@
 	<div id="sectionwrap" class="top-edge-shadow topsection">
 		<div class="row">
 			<div class="col-lg-11 col-lg-offset-1">
-				<h1>Travel</h1><hr class="whitebackground">
+				<h1>Accomodations</h1><hr class="whitebackground">
 			</div>
 		</div>
 
 
 			<div class="container-fluid">
 
-				<div class="container-fluid">
-					<div class="row">
-						<div class="col-xl-1 col-centered">
-							<h3>Hotels</h3>
-						</div>
-					</div>
-					<hr class="datedivider">
 
 					<div class="row">
 						<div class="col-xl-1 col-centered">
@@ -169,8 +163,8 @@
 					</div>
 					<div class="row">
 						<div class="col-xl-1 col-centered">
-							<a href="tel:2026262603" type="button" class="btn btn-calendar">202.626.2603</a>
-							<a href="http://www.marriott.com/hotels/travel/wasjw-jw-marriott-washington-dc/" type="button" class="btn btn-calendar">Website</a>
+							<a href="tel:2023932000" type="button" class="btn btn-calendar">202.393.2000</a>
+							<a href="https://aws.passkey.com/event/48975576/owner/559/home" type="button" class="btn btn-calendar">Website</a>
 							<a href="https://goo.gl/maps/kKTfVRupxHP2" type="button" class="btn btn-calendar">Google Maps</a>
 						</div>
 					</div>
@@ -194,8 +188,8 @@ To reserve, please click website button above to access our personalized booking
 					</div>
 					<div class="row">
 						<div class="col-xl-1 col-centered">
-							<a href="tel:2025821234" type="button" class="btn btn-calendar">(202) 582-1234</a>
-							<a href="https://washingtondc.grand.hyatt.com/en/hotel/home.html" type="button" class="btn btn-calendar">Website</a>
+							<a href="tel:2025821234" type="button" class="btn btn-calendar">202.582.1234</a>
+							<a href="https://aws.passkey.com/event/48987742/owner/544/home" type="button" class="btn btn-calendar">Website</a>
 							<a href="https://goo.gl/maps/HJKHyQ5C2Z92" type="button" class="btn btn-calendar">Google Maps</a>
 						</div>
 					</div>
@@ -209,126 +203,7 @@ Note: If you call the hotel for assistance, please reference the Williams/Slocum
 					</div>
 				</div>
 
-
-
-
-
-				<div class="container-fluid">
-					<div class="row">
-						<div class="col-xl-1 col-centered">
-							<h3>Planes</h3>
-						</div>
-					</div>
-					<hr class="datedivider">
-					<div class="row">
-						<div class="col-xl-1 col-centered">
-							<h4>Ronald Reagan Washington National Airport (DCA)</h4>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-xl-1 col-centered">
-							<a href="https://goo.gl/maps/zpz1bqjahhJ2" type="button" class="btn btn-calendar">Google Maps</a>
-						</div>
-					</div> <br />
-					<div class="row">
-						<div class="col-xl-1 col-centered">
-							Reagan is the most convenient airport.  You can easily take a taxi five miles from the Airport to any of the hotels.
-						</div><br />
-					</div>
-					<div class="row">
-						<div class="col-xl-1 col-centered">
-							<h4>Dulles International Airport (IAD)</h4>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-xl-1 col-centered">
-							<a href="https://goo.gl/maps/KoU4LUwNhpN2" type="button" class="btn btn-calendar">Google Maps</a>
-						</div>
-					</div>
-					<br />
-					<div class="row">
-						<div class="col-xl-1 col-centered">
-							Dulles is just as convenient as BWI.  It will also require a rental car.  The drive will take approximately 50 minutes depending on traffic.
-						</div><br />
-					</div>
-					<div class="row">
-						<div class="col-xl-1 col-centered">
-							<h4>Baltimore/Washington International Airport (BWI)</h4>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-xl-1 col-centered">
-							<a href="https://goo.gl/maps/i6LRWe8mCY72" type="button" class="btn btn-calendar">Google Maps</a>
-						</div>
-					</div>
-					<br />
-					<div class="row">
-						<div class="col-xl-1 col-centered">
-							BWI is also a convenient airport, but will probably require a rental car.  The drive will take approximately 50 minutes depending on traffic.
-						</div><br />
-					</div>
-					
-				</div>
-			
-				<div class="container-fluid">
-					<div class="row">
-						<div class="col-xl-1 col-centered">
-							<h3>Trains</h3>
-						</div>
-					</div>
-					<hr class="datedivider">
-					<div class="row">
-						<div class="col-xl-1 col-centered">
-							<h4>Amtrack Union Station</h4>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-xl-1 col-centered">
-							<a href="https://www.amtrak.com/servlet/ContentServer?pagename=am/am2Station/Station_Page&amp;code=WAS" type="button" class="btn btn-calendar">Website</a>
-						</div>
-					</div>
-					<br />
-					<div class="row">
-						<div class="col-xl-1 col-centered">
-							Train information
-						</div><br />
-					</div>
-				</div>
 			</div>
-
-		<div class="container-fluid fullsection">
-			<div class="row">
-				<div id="mapholder" class="col-lg-12 centered">
-					<iframe id="locationmap" src="untitled.html"></iframe>
-			
-				</div>
-			</div>
-		</div>
-
-		<div class="container-fluid">
-					<div class="row">
-						<div class="col-xl-1 col-centered">
-							<h3>Metro</h3>
-						</div>
-					</div>
-					<hr class="datedivider">
-					<div class="row">
-						<div class="col-xl-1 col-centered">
-							<h4>Metro stop</h4>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-xl-1 col-centered">
-							<a href="https://www.wmata.com" type="button" class="btn btn-calendar">Map</a>
-						</div>
-					</div>
-					<br />
-					<div class="row">
-						<div class="col-xl-1 col-centered">
-							Train information
-						</div><br />
-					</div>
-				</div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
