--- a/weddingparty.html
+++ b/weddingparty.html
@@ -104,12 +104,13 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse centered">
           	<ul class="nav navbar-nav centered">
-				<li><a href="index.html#welcomewrap" title="Welcome">Welcome</a></li>
 				<li><a href="aboutus.html" title="Our Story">About Us</a></li>
 				<li><a href="weddingparty.html" title="Wedding Party">Wedding Party</a></li>
-				<li><a href="wedding.html" title="Wedding Party">Details</a></li>
-				<li><a href="travelaccomodations.html" title="Accomodations">Travel</a></li>
+				<li><a href="wedding.html" title="Wedding">Schedule</a></li>
+				<li><a href="travelaccomodations.html" title="Accomodations">Accomodations</a></li>
+				<li><a href="travel.html" title="Travel">Travel</a></li>
 				<li><a href="registry.html" title="Registry">Registry</a></li>
+				<li><a href="travelaccomodations.html" title="Accomodations">Things To Do</a></li>
 				<li><a href="photos.html" title="Schedule">Photos</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -156,10 +157,10 @@
 	<div class="container fullsection">
 			<div class="row">
 				<div class="col-xs-6 centered">
-					<h4>Bridesmaids</h4><hr class="datedivider">
+					<h4>Matron of Honor</h4><hr class="datedivider">
 				</div>
 				<div class="col-xs-6 centered">
-					<h4>Groomsmen</h4><hr class="datedivider">
+					<h4>Best Man</h4><hr class="datedivider">
 				</div>
 			</div>
 			<div class="row">
@@ -172,6 +173,14 @@
 					<a href="#" id="patmodalbutton" data-toggle="modal" data-target="#patmodal" title="Patrick Robertson"><img class="imgcell imagedropshadow" src="assets/img/photos/pat_320x320.jpg"/></a>
 					<h4>Patrick Robertson</h4><h5>Best Man</h5>
 					<br />
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-6 centered">
+					<h4>Bridesmaids</h4><hr class="datedivider">
+				</div>
+				<div class="col-xs-6 centered">
+					<h4>Groomsmen</h4><hr class="datedivider">
 				</div>
 			</div>
 			<div class="row">
